fix the welcome text backgroud and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,17 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+.welcome-text {
+  background: #eee;
+  padding:12px;
+  margin: 12px;
+  border-radius: 12px;
+}
+.welcome-text h2 {
+  text-align: center;
+  font-size: 18px;
+  
+}
 
 @media (prefers-color-scheme: light) {
   :root {
